# LactomedaBot

./: .gitignore  app.py  bot.py  pyproject.toml  requirements.txt  responses.py
src/lactomeda/: __main__.py
src/lactomeda/config/: ai_response.py  constants.py  fake_interaction.py  lactomeda_config.py
src/lactomeda/modules/: base.py
src/lactomeda/modules/discord/: __init__.py  __main__.py
src/lactomeda/modules/discord/cogs/: commands.py  messages.py
src/lactomeda/modules/discord/modals/: music.py
src/lactomeda/modules/discord/plugins/: Downloader.py  Listener.py  ai_client.py  music.py
src/lactomeda/modules/discord/views/: music.py
src/lactomeda/tests/: test.py
src/utils/: fake_interaction.py  random_int.py  url_analyzer.py
