[project]
name = "lactomeda"
version = "0.1.0"
description = "Multipurpose Bot"
authors = [
    {name = "Josue",email = "josue.medina9991@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "yt-dlp (>=2025.2.19,<2026.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "pynacl (>=1.5.0,<2.0.0)",
    "spotipy (>=2.25.1,<3.0.0)",
    "openai (>=1.66.2,<2.0.0)",
    "py-cord[speed,voice] (>=2.6.1,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "openai-whisper (>=20240930,<20240931)",
    "ruff (>=0.11.2,<0.12.0)",
]

[tool.poetry.scripts]
start-bot = "lactomeda.__main__:main"
start-test = "lactomeda.tests.test:main"


[tool.poetry]
# ...
packages = [
    { include = "lactomeda", from = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
